--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     
+    <h2>The Bavarian State Opera House</h2>
+    <h3>2018</h3>
+    <h3>28th February,1900</h3>
+    </header>
+    <article>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ipsum nihil, molestiae cupiditate dolore culpa perferendis aut magnam facilis necessitatibus quaerat, at id quas iure temporibus harum ducimus nemo minima.</p>  
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laboriosam dolore culpa rem blanditiis reprehenderit incidunt ipsa, numquam, temporibus facilis dolores molestias earum minima. Delectus, nesciunt! Dolorem blanditiis repudiandae quod.</p> 
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil officiis eum expedita alias quaerat enim nostrum doloribus vel eius quibusdam doloremque praesentium magnam sequi ipsa hic, deleniti inventore molestiae voluptatem?</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sequi ab fugit, sunt quam corrupti architecto! Repudiandae, dolore ipsa, earum corrupti deleniti ex nobis expedita excepturi aliquid vitae voluptas sunt.</p>
+     <h1>Nureyev</h1>
+    </article>
+
+    
+
 </body>
 </html>
