h1,h2 and header borders

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <header>
     
     <h2>The Bavarian State Opera House</h2>
-    <h3>2018</h3>
-    <h3>28th February,1900</h3>
+    <h3>2018&28th February,1900</h3>
     </header>
     <article>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ipsum nihil, molestiae cupiditate dolore culpa perferendis aut magnam facilis necessitatibus quaerat, at id quas iure temporibus harum ducimus nemo minima.</p>  
@@ -21,8 +20,5 @@
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sequi ab fugit, sunt quam corrupti architecto! Repudiandae, dolore ipsa, earum corrupti deleniti ex nobis expedita excepturi aliquid vitae voluptas sunt.</p>
      <h1>Nureyev</h1>
     </article>
-
-    
-
 </body>
 </html>
