--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
     <header>
-    
+    <div>
     <h2>The Bavarian State Opera House</h2>
-    <h3>2018&28th February,1900</h3>
+    </div>
+    <section class="grid-container-h">
+    <h3>2018</h3>
+    <h4>28th February,19:00</h4>
+</section>
     </header>
-    <article>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, ipsum nihil, molestiae cupiditate dolore culpa perferendis aut magnam facilis necessitatibus quaerat, at id quas iure temporibus harum ducimus nemo minima.</p>  
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laboriosam dolore culpa rem blanditiis reprehenderit incidunt ipsa, numquam, temporibus facilis dolores molestias earum minima. Delectus, nesciunt! Dolorem blanditiis repudiandae quod.</p> 
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil officiis eum expedita alias quaerat enim nostrum doloribus vel eius quibusdam doloremque praesentium magnam sequi ipsa hic, deleniti inventore molestiae voluptatem?</p>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sequi ab fugit, sunt quam corrupti architecto! Repudiandae, dolore ipsa, earum corrupti deleniti ex nobis expedita excepturi aliquid vitae voluptas sunt.</p>
-     <h1>Nureyev</h1>
+    <article class="grid-container-paragraph">
+     <p class="grid1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium maiores quibusdam, autem veniam sequi quos! Fugit cupiditate quis error qui voluptas, id non impedit quo sunt adipisci dolor voluptate omnis.</p>
+     <p class="grid2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laboriosam dolore culpa rem blanditiis reprehenderit incidunt ipsa, numquam, temporibus facilis dolores molestias earum minima. Delectus, nesciunt! Dolorem blanditiis repudiandae quod.</p> 
+     <p class="grid3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil officiis eum expedita alias quaerat enim nostrum doloribus vel eius quibusdam doloremque praesentium magnam sequi ipsa hic, deleniti inventore molestiae voluptatem?</p>
+     <p class="grid4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sequi ab fugit, sunt quam corrupti architecto! Repudiandae, dolore ipsa, earum corrupti deleniti ex nobis expedita excepturi aliquid vitae voluptas sunt.</p>
     </article>
+    <h1>Nureyev</h1>
 </body>
 </html>
