--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
     </header>
     <article class="grid-container-paragraph">
      <p class="grid1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium maiores quibusdam, autem veniam sequi quos! Fugit cupiditate quis error qui voluptas, id non impedit quo sunt adipisci dolor voluptate omnis.</p>
-     <p class="grid2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laboriosam dolore culpa rem blanditiis reprehenderit incidunt ipsa, numquam, temporibus facilis dolores molestias earum minima. Delectus, nesciunt! Dolorem blanditiis repudiandae quod.</p> 
-     <p class="grid3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil officiis eum expedita alias quaerat enim nostrum doloribus vel eius quibusdam doloremque praesentium magnam sequi ipsa hic, deleniti inventore molestiae voluptatem?</p>
-     <p class="grid4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi sequi ab fugit, sunt quam corrupti architecto! Repudiandae, dolore ipsa, earum corrupti deleniti ex nobis expedita excepturi aliquid vitae voluptas sunt.</p>
+     <p class="grid2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium maiores quibusdam, autem veniam sequi quos! Fugit cupiditate quis error qui voluptas, id non impedit quo sunt adipisci dolor voluptate omnis.</p> 
+     <p class="grid3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium maiores quibusdam, autem veniam sequi quos! Fugit cupiditate quis error qui voluptas, id non impedit quo sunt adipisci dolor voluptate omnis.</p>
+     <p class="grid4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium maiores quibusdam, autem veniam sequi quos! Fugit cupiditate quis error qui voluptas, id non impedit quo sunt adipisci dolor voluptate omnis.</p>
+    
     </article>
-    <h1>Nureyev</h1>
+    <div class="container">
+    <p class="title1">Nu</p>
+    <p class="title2">rey</p>
+    <p class="title3">ev</p>
+</div>
 </body>
 </html>
